Make UrlFilter ignore emails

It screws them up anyway because of the '>' at the end. We'll make
a separate filter for emails that deals with them better later.

BUG: 310502